// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zap Pagination component should render correctly. 1`] = `
<Card
  tag="div"
>
  <CardHeader
    className="customCardHeader"
    tag="div"
  >
    <span
      className="h5"
    >
      Canonical Fields
    </span>
    <Button
      className="zapButton"
      color="primary"
      onClick={[Function]}
      tag="button"
    >
      <i
        aria-hidden="true"
        className="fa fa-plus-circle"
      />
      <span
        className="sr-only"
      >
        Add new value
      </span>
    </Button>
  </CardHeader>
  <CardBody
    className="customCardBody"
    tag="div"
  >
    <FormGroup
      tag="div"
    >
      <DebounceInput
        className="form-control"
        debounceTimeout={300}
        element="input"
        forceNotifyByEnter={true}
        forceNotifyOnBlur={true}
        minLength={0}
        name="search"
        onChange={[Function]}
        placeholder="Search"
        type="search"
      />
    </FormGroup>
    <div
      className="d-flex mt-1"
    >
      <PaginationItem
        disabled={true}
        tag="span"
      >
        <PaginationLink
          onClick={[Function]}
          previous={true}
          tag="a"
        />
      </PaginationItem>
      <Pagination
        aria-label="pagination"
        className="customPagination"
        listTag="ul"
        tag="nav"
      >
        <PaginationItem
          key="0"
          tag="li"
        >
          <PaginationLink
            className="activePage"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            1
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="1"
          tag="li"
        >
          <PaginationLink
            className=""
            key="1"
            onClick={[Function]}
            tag="a"
          >
            2
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="2"
          tag="li"
        >
          <PaginationLink
            className=""
            key="2"
            onClick={[Function]}
            tag="a"
          >
            3
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="3"
          tag="li"
        >
          <PaginationLink
            className=""
            key="3"
            onClick={[Function]}
            tag="a"
          >
            4
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="4"
          tag="li"
        >
          <PaginationLink
            className=""
            key="4"
            onClick={[Function]}
            tag="a"
          >
            5
          </PaginationLink>
        </PaginationItem>
      </Pagination>
      <PaginationItem
        disabled={false}
        tag="span"
      >
        <PaginationLink
          href="javascript:void(0);"
          next={true}
          onClick={[Function]}
          tag="a"
        />
      </PaginationItem>
    </div>
    <Row
      className="paginationCard"
      tag="div"
    >
      <Col
        md="10"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs="12"
      >
        <ListGroup
          flush={true}
          tag="ul"
        >
          <ListGroupItem
            className="d-flex justify-content-between text-dark"
            href="javascript:void(0);"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            <span>
              ADDRESS
            </span>
          </ListGroupItem>
        </ListGroup>
      </Col>
      <Col
        md="2"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs="12"
      >
        <ListGroup
          className="letterList"
          flush={true}
          tag="ul"
        >
          <ListGroupItem
            className=""
            href="javascript:void(0);"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            A
          </ListGroupItem>
          <ListGroupItem
            className="clearFilter fa fa-times-circle"
            href="javascript:void(0);"
            onClick={[Function]}
            tag="a"
            title="Clear"
          />
        </ListGroup>
      </Col>
    </Row>
    <div
      className="d-flex mt-1"
    >
      <PaginationItem
        disabled={true}
        tag="span"
      >
        <PaginationLink
          onClick={[Function]}
          previous={true}
          tag="a"
        />
      </PaginationItem>
      <Pagination
        aria-label="pagination"
        className="customPagination"
        listTag="ul"
        tag="nav"
      >
        <PaginationItem
          key="0"
          tag="li"
        >
          <PaginationLink
            className="activePage"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            1
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="1"
          tag="li"
        >
          <PaginationLink
            className=""
            key="1"
            onClick={[Function]}
            tag="a"
          >
            2
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="2"
          tag="li"
        >
          <PaginationLink
            className=""
            key="2"
            onClick={[Function]}
            tag="a"
          >
            3
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="3"
          tag="li"
        >
          <PaginationLink
            className=""
            key="3"
            onClick={[Function]}
            tag="a"
          >
            4
          </PaginationLink>
        </PaginationItem>
        <PaginationItem
          key="4"
          tag="li"
        >
          <PaginationLink
            className=""
            key="4"
            onClick={[Function]}
            tag="a"
          >
            5
          </PaginationLink>
        </PaginationItem>
      </Pagination>
      <PaginationItem
        disabled={false}
        tag="span"
      >
        <PaginationLink
          href="javascript:void(0);"
          next={true}
          onClick={[Function]}
          tag="a"
        />
      </PaginationItem>
    </div>
  </CardBody>
</Card>
`;

exports[`Zap Pagination component should render correctly. 2`] = `
<Card
  tag="div"
>
  <CardHeader
    className="customCardHeader"
    tag="div"
  >
    <span
      className="h5"
    >
      Canonical Fields
    </span>
    <Button
      className="zapButton"
      color="primary"
      onClick={[Function]}
      tag="button"
    >
      <i
        aria-hidden="true"
        className="fa fa-plus-circle"
      />
      <span
        className="sr-only"
      >
        Add new value
      </span>
    </Button>
  </CardHeader>
  <CardBody
    className="customCardBody"
    tag="div"
  >
    <FormGroup
      tag="div"
    >
      <DebounceInput
        className="form-control"
        debounceTimeout={300}
        element="input"
        forceNotifyByEnter={true}
        forceNotifyOnBlur={true}
        minLength={0}
        name="search"
        onChange={[Function]}
        placeholder="Search"
        type="search"
      />
    </FormGroup>
    <Row
      className="paginationCard"
      tag="div"
    >
      <Col
        md="10"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs="12"
      >
        <ListGroup
          flush={true}
          tag="ul"
        >
          <ListGroupItem
            className="d-flex justify-content-between text-dark selectedValue"
            href="javascript:void(0);"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            <span>
              ADDRESS
            </span>
          </ListGroupItem>
          <ListGroupItem
            className="d-flex justify-content-between text-dark"
            href="javascript:void(0);"
            key="1"
            onClick={[Function]}
            tag="a"
          >
            <span>
              AGE
            </span>
          </ListGroupItem>
          <ListGroupItem
            className="d-flex justify-content-between text-dark"
            href="javascript:void(0);"
            key="2"
            onClick={[Function]}
            tag="a"
          >
            <span>
              AMENITIES
            </span>
          </ListGroupItem>
          <ListGroupItem
            className="d-flex justify-content-between text-dark"
            href="javascript:void(0);"
            key="3"
            onClick={[Function]}
            tag="a"
          >
            <span>
              AREA
            </span>
          </ListGroupItem>
          <ListGroupItem
            className="d-flex justify-content-between text-dark"
            href="javascript:void(0);"
            key="4"
            onClick={[Function]}
            tag="a"
          >
            <span>
              ASSESSMENTS
            </span>
          </ListGroupItem>
        </ListGroup>
      </Col>
      <Col
        md="2"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs="12"
      >
        <ListGroup
          className="letterList"
          flush={true}
          tag="ul"
        >
          <ListGroupItem
            className=""
            href="javascript:void(0);"
            key="0"
            onClick={[Function]}
            tag="a"
          >
            A
          </ListGroupItem>
          <ListGroupItem
            className="clearFilter fa fa-times-circle"
            href="javascript:void(0);"
            onClick={[Function]}
            tag="a"
            title="Clear"
          />
        </ListGroup>
      </Col>
    </Row>
  </CardBody>
</Card>
`;
